getting_started/parser.output
Grammar

    0 $accept: program "end of file"

    1 program: global_var_list class_list entry opt_newlines "end of file"

    2 global_var_list: ε
    3                | global_var_list NEWLINE
    4                | global_var_list var_decl stmt_end

    5 opt_newlines: ε
    6             | opt_newlines NEWLINE

    7 class_list: ε
    8           | class_list class_decl

    9 class_decl: CLASS ID LBRACE class_body RBRACE opt_newlines

   10 class_body: class_member_list

   11 class_member_list: ε
   12                  | class_member_list NEWLINE
   13                  | class_member_list class_member

   14 class_member: ID class_member_tail
   15             | VOLATILE ID COLON type opt_init stmt_end

   16 class_member_tail: COLON type opt_init stmt_end
   17                  | LP param_list_opt RP COLON type stmt_block

   18 param_list_opt: ε
   19               | param_list

   20 param_list: param
   21           | param_list COMMA param

   22 param: ID COLON type

   23 entry: MAIN LP RP COLON INT_TYPE stmt_block

   24 stmt_block: LBRACE stmt_list RBRACE

   25 stmt_list: ε
   26          | stmt_list NEWLINE
   27          | stmt_list stmt

   28 stmt_end: NEWLINE

   29 stmt: stmt_block
   30     | var_decl stmt_end
   31     | lvalue ASSIGN expr stmt_end
   32     | expr stmt_end
   33     | IF LP expr RP stmt
   34     | IF LP expr RP stmt ELSE stmt
   35     | FOR LP for_init_opt COMMA for_cond_opt COMMA lvalue ASSIGN expr RP stmt
   36     | PRINT LP expr RP stmt_end
   37     | READ LP lvalue RP stmt_end
   38     | RETURN expr stmt_end
   39     | BREAK stmt_end
   40     | CONTINUE stmt_end

   41 for_init_opt: ε
   42             | for_init

   43 for_init: var_decl
   44         | lvalue ASSIGN expr

   45 for_cond_opt: ε
   46             | expr

   47 var_decl: ID COLON type opt_init
   48         | VOLATILE ID COLON type opt_init

   49 opt_init: ε
   50         | ASSIGN expr

   51 type: base_type array_opt
   52     | ID
   53     | VOID

   54 base_type: INT_TYPE
   55          | FLOAT_TYPE
   56          | BOOLEAN

   57 array_opt: ε
   58          | LBRACK RBRACK

   59 lvalue: ID lvalue_tail_list

   60 lvalue_tail_list: ε
   61                 | lvalue_tail_list lvalue_tail

   62 lvalue_tail: LBRACK expr RBRACK
   63            | DOT ID
   64            | DOT LENGTH

   65 expr: expr_or

   66 expr_or: expr_or OR expr_and
   67        | expr_and

   68 expr_and: expr_and AND expr_cmp
   69         | expr_cmp

   70 expr_cmp: expr_add LT expr_add
   71         | expr_add GT expr_add
   72         | expr_add LE expr_add
   73         | expr_add GE expr_add
   74         | expr_add EQ expr_add
   75         | expr_add NE expr_add
   76         | expr_add

   77 expr_add: expr_add PLUSOP expr_mul
   78         | expr_add MINUSOP expr_mul
   79         | expr_mul

   80 expr_mul: expr_mul MULTOP expr_pow
   81         | expr_mul DIVOP expr_pow
   82         | expr_pow

   83 expr_pow: expr_unary POWOP expr_pow
   84         | expr_unary

   85 expr_unary: NOT expr_unary
   86           | MINUSOP expr_unary
   87           | expr_postfix

   88 expr_postfix: expr_postfix LP args_opt RP
   89             | primary

   90 primary: INT
   91        | FLOAT
   92        | TRUE
   93        | FALSE
   94        | lvalue
   95        | base_type LBRACK args RBRACK
   96        | LP expr RP

   97 args_opt: ε
   98         | args

   99 args: expr
  100     | args COMMA expr


Terminals, with rules where they appear

    "end of file" (0) 0 1
    error (256)
    ID <std::string> (258) 9 14 15 22 47 48 52 59 63
    INT <std::string> (259) 90
    FLOAT <std::string> (260) 91
    NEWLINE <std::string> (261) 3 6 12 26 28
    PLUSOP <std::string> (262) 77
    MINUSOP <std::string> (263) 78 86
    MULTOP <std::string> (264) 80
    DIVOP <std::string> (265) 81
    POWOP <std::string> (266) 83
    ASSIGN <std::string> (267) 31 35 44 50
    LT <std::string> (268) 70
    GT <std::string> (269) 71
    LE <std::string> (270) 72
    GE <std::string> (271) 73
    EQ <std::string> (272) 74
    NE <std::string> (273) 75
    AND <std::string> (274) 68
    OR <std::string> (275) 66
    NOT <std::string> (276) 85
    LP <std::string> (277) 17 23 33 34 35 36 37 88 96
    RP <std::string> (278) 17 23 33 34 35 36 37 88 96
    LBRACE <std::string> (279) 9 24
    RBRACE <std::string> (280) 9 24
    LBRACK <std::string> (281) 58 62 95
    RBRACK <std::string> (282) 58 62 95
    COMMA <std::string> (283) 21 35 100
    COLON <std::string> (284) 15 16 17 22 23 47 48
    DOT <std::string> (285) 63 64
    CLASS <std::string> (286) 9
    MAIN <std::string> (287) 23
    INT_TYPE <std::string> (288) 23 54
    FLOAT_TYPE <std::string> (289) 55
    BOOLEAN <std::string> (290) 56
    VOLATILE <std::string> (291) 15 48
    VOID <std::string> (292) 53
    IF <std::string> (293) 33 34
    ELSE <std::string> (294) 34
    FOR <std::string> (295) 35
    RETURN <std::string> (296) 38
    BREAK <std::string> (297) 39
    CONTINUE <std::string> (298) 40
    PRINT <std::string> (299) 36
    READ <std::string> (300) 37
    TRUE <std::string> (301) 92
    FALSE <std::string> (302) 93
    LENGTH <std::string> (303) 64
    IF_NO_ELSE (304)
    UMINUS (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program <Node *> (52)
        on left: 1
        on right: 0
    global_var_list <Node *> (53)
        on left: 2 3 4
        on right: 1 3 4
    opt_newlines <Node *> (54)
        on left: 5 6
        on right: 1 6 9
    class_list <Node *> (55)
        on left: 7 8
        on right: 1 8
    class_decl <Node *> (56)
        on left: 9
        on right: 8
    class_body <Node *> (57)
        on left: 10
        on right: 9
    class_member_list <Node *> (58)
        on left: 11 12 13
        on right: 10 12 13
    class_member <Node *> (59)
        on left: 14 15
        on right: 13
    class_member_tail <Node *> (60)
        on left: 16 17
        on right: 14
    param_list_opt <Node *> (61)
        on left: 18 19
        on right: 17
    param_list <Node *> (62)
        on left: 20 21
        on right: 19 21
    param <Node *> (63)
        on left: 22
        on right: 20 21
    entry <Node *> (64)
        on left: 23
        on right: 1
    stmt_block <Node *> (65)
        on left: 24
        on right: 17 23 29
    stmt_list <Node *> (66)
        on left: 25 26 27
        on right: 24 26 27
    stmt_end <Node *> (67)
        on left: 28
        on right: 4 15 16 30 31 32 36 37 38 39 40
    stmt <Node *> (68)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 27 33 34 35
    for_init_opt <Node *> (69)
        on left: 41 42
        on right: 35
    for_init <Node *> (70)
        on left: 43 44
        on right: 42
    for_cond_opt <Node *> (71)
        on left: 45 46
        on right: 35
    var_decl <Node *> (72)
        on left: 47 48
        on right: 4 30 43
    opt_init <Node *> (73)
        on left: 49 50
        on right: 15 16 47 48
    type <Node *> (74)
        on left: 51 52 53
        on right: 15 16 17 22 47 48
    base_type <Node *> (75)
        on left: 54 55 56
        on right: 51 95
    array_opt <Node *> (76)
        on left: 57 58
        on right: 51
    lvalue <Node *> (77)
        on left: 59
        on right: 31 35 37 44 94
    lvalue_tail_list <Node *> (78)
        on left: 60 61
        on right: 59 61
    lvalue_tail <Node *> (79)
        on left: 62 63 64
        on right: 61
    expr <Node *> (80)
        on left: 65
        on right: 31 32 33 34 35 36 38 44 46 50 62 96 99 100
    expr_or <Node *> (81)
        on left: 66 67
        on right: 65 66
    expr_and <Node *> (82)
        on left: 68 69
        on right: 66 67 68
    expr_cmp <Node *> (83)
        on left: 70 71 72 73 74 75 76
        on right: 68 69
    expr_add <Node *> (84)
        on left: 77 78 79
        on right: 70 71 72 73 74 75 76 77 78
    expr_mul <Node *> (85)
        on left: 80 81 82
        on right: 77 78 79 80 81
    expr_pow <Node *> (86)
        on left: 83 84
        on right: 80 81 82 83
    expr_unary <Node *> (87)
        on left: 85 86 87
        on right: 83 84 85 86
    expr_postfix <Node *> (88)
        on left: 88 89
        on right: 87 88
    primary <Node *> (89)
        on left: 90 91 92 93 94 95 96
        on right: 89
    args_opt <Node *> (90)
        on left: 97 98
        on right: 88
    args <Node *> (91)
        on left: 99 100
        on right: 95 98 100


State 0

    0 $accept: • program "end of file"

    $default  reduce using rule 2 (global_var_list)

    program          go to state 1
    global_var_list  go to state 2


State 1

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 program: global_var_list • class_list entry opt_newlines "end of file"
    3 global_var_list: global_var_list • NEWLINE
    4                | global_var_list • var_decl stmt_end

    ID        shift, and go to state 4
    NEWLINE   shift, and go to state 5
    VOLATILE  shift, and go to state 6

    $default  reduce using rule 7 (class_list)

    class_list  go to state 7
    var_decl    go to state 8


State 3

    0 $accept: program "end of file" •

    $default  accept


State 4

   47 var_decl: ID • COLON type opt_init

    COLON  shift, and go to state 9


State 5

    3 global_var_list: global_var_list NEWLINE •

    $default  reduce using rule 3 (global_var_list)


State 6

   48 var_decl: VOLATILE • ID COLON type opt_init

    ID  shift, and go to state 10


State 7

    1 program: global_var_list class_list • entry opt_newlines "end of file"
    8 class_list: class_list • class_decl

    CLASS  shift, and go to state 11
    MAIN   shift, and go to state 12

    class_decl  go to state 13
    entry       go to state 14


State 8

    4 global_var_list: global_var_list var_decl • stmt_end

    NEWLINE  shift, and go to state 15

    stmt_end  go to state 16


State 9

   47 var_decl: ID COLON • type opt_init

    ID          shift, and go to state 17
    INT_TYPE    shift, and go to state 18
    FLOAT_TYPE  shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    VOID        shift, and go to state 21

    type       go to state 22
    base_type  go to state 23


State 10

   48 var_decl: VOLATILE ID • COLON type opt_init

    COLON  shift, and go to state 24


State 11

    9 class_decl: CLASS • ID LBRACE class_body RBRACE opt_newlines

    ID  shift, and go to state 25


State 12

   23 entry: MAIN • LP RP COLON INT_TYPE stmt_block

    LP  shift, and go to state 26


State 13

    8 class_list: class_list class_decl •

    $default  reduce using rule 8 (class_list)


State 14

    1 program: global_var_list class_list entry • opt_newlines "end of file"

    $default  reduce using rule 5 (opt_newlines)

    opt_newlines  go to state 27


State 15

   28 stmt_end: NEWLINE •

    $default  reduce using rule 28 (stmt_end)


State 16

    4 global_var_list: global_var_list var_decl stmt_end •

    $default  reduce using rule 4 (global_var_list)


State 17

   52 type: ID •

    $default  reduce using rule 52 (type)


State 18

   54 base_type: INT_TYPE •

    $default  reduce using rule 54 (base_type)


State 19

   55 base_type: FLOAT_TYPE •

    $default  reduce using rule 55 (base_type)


State 20

   56 base_type: BOOLEAN •

    $default  reduce using rule 56 (base_type)


State 21

   53 type: VOID •

    $default  reduce using rule 53 (type)


State 22

   47 var_decl: ID COLON type • opt_init

    ASSIGN  shift, and go to state 28

    $default  reduce using rule 49 (opt_init)

    opt_init  go to state 29


State 23

   51 type: base_type • array_opt

    LBRACK  shift, and go to state 30

    $default  reduce using rule 57 (array_opt)

    array_opt  go to state 31


State 24

   48 var_decl: VOLATILE ID COLON • type opt_init

    ID          shift, and go to state 17
    INT_TYPE    shift, and go to state 18
    FLOAT_TYPE  shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    VOID        shift, and go to state 21

    type       go to state 32
    base_type  go to state 23


State 25

    9 class_decl: CLASS ID • LBRACE class_body RBRACE opt_newlines

    LBRACE  shift, and go to state 33


State 26

   23 entry: MAIN LP • RP COLON INT_TYPE stmt_block

    RP  shift, and go to state 34


State 27

    1 program: global_var_list class_list entry opt_newlines • "end of file"
    6 opt_newlines: opt_newlines • NEWLINE

    "end of file"  shift, and go to state 35
    NEWLINE        shift, and go to state 36


State 28

   50 opt_init: ASSIGN • expr

    ID          shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    MINUSOP     shift, and go to state 40
    NOT         shift, and go to state 41
    LP          shift, and go to state 42
    INT_TYPE    shift, and go to state 18
    FLOAT_TYPE  shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    TRUE        shift, and go to state 43
    FALSE       shift, and go to state 44

    base_type     go to state 45
    lvalue        go to state 46
    expr          go to state 47
    expr_or       go to state 48
    expr_and      go to state 49
    expr_cmp      go to state 50
    expr_add      go to state 51
    expr_mul      go to state 52
    expr_pow      go to state 53
    expr_unary    go to state 54
    expr_postfix  go to state 55
    primary       go to state 56


State 29

   47 var_decl: ID COLON type opt_init •

    $default  reduce using rule 47 (var_decl)


State 30

   58 array_opt: LBRACK • RBRACK

    RBRACK  shift, and go to state 57


State 31

   51 type: base_type array_opt •

    $default  reduce using rule 51 (type)


State 32

   48 var_decl: VOLATILE ID COLON type • opt_init

    ASSIGN  shift, and go to state 28

    $default  reduce using rule 49 (opt_init)

    opt_init  go to state 58


State 33

    9 class_decl: CLASS ID LBRACE • class_body RBRACE opt_newlines

    $default  reduce using rule 11 (class_member_list)

    class_body         go to state 59
    class_member_list  go to state 60


State 34

   23 entry: MAIN LP RP • COLON INT_TYPE stmt_block

    COLON  shift, and go to state 61


State 35

    1 program: global_var_list class_list entry opt_newlines "end of file" •

    $default  reduce using rule 1 (program)


State 36

    6 opt_newlines: opt_newlines NEWLINE •

    $default  reduce using rule 6 (opt_newlines)


State 37

   59 lvalue: ID • lvalue_tail_list

    $default  reduce using rule 60 (lvalue_tail_list)

    lvalue_tail_list  go to state 62


State 38

   90 primary: INT •

    $default  reduce using rule 90 (primary)


State 39

   91 primary: FLOAT •

    $default  reduce using rule 91 (primary)


State 40

   86 expr_unary: MINUSOP • expr_unary

    ID          shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    MINUSOP     shift, and go to state 40
    NOT         shift, and go to state 41
    LP          shift, and go to state 42
    INT_TYPE    shift, and go to state 18
    FLOAT_TYPE  shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    TRUE        shift, and go to state 43
    FALSE       shift, and go to state 44

    base_type     go to state 45
    lvalue        go to state 46
    expr_unary    go to state 63
    expr_postfix  go to state 55
    primary       go to state 56


State 41

   85 expr_unary: NOT • expr_unary

    ID          shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    MINUSOP     shift, and go to state 40
    NOT         shift, and go to state 41
    LP          shift, and go to state 42
    INT_TYPE    shift, and go to state 18
    FLOAT_TYPE  shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    TRUE        shift, and go to state 43
    FALSE       shift, and go to state 44

    base_type     go to state 45
    lvalue        go to state 46
    expr_unary    go to state 64
    expr_postfix  go to state 55
    primary       go to state 56


State 42

   96 primary: LP • expr RP

    ID          shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    MINUSOP     shift, and go to state 40
    NOT         shift, and go to state 41
    LP          shift, and go to state 42
    INT_TYPE    shift, and go to state 18
    FLOAT_TYPE  shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    TRUE        shift, and go to state 43
    FALSE       shift, and go to state 44

    base_type     go to state 45
    lvalue        go to state 46
    expr          go to state 65
    expr_or       go to state 48
    expr_and      go to state 49
    expr_cmp      go to state 50
    expr_add      go to state 51
    expr_mul      go to state 52
    expr_pow      go to state 53
    expr_unary    go to state 54
    expr_postfix  go to state 55
    primary       go to state 56


State 43

   92 primary: TRUE •

    $default  reduce using rule 92 (primary)


State 44

   93 primary: FALSE •

    $default  reduce using rule 93 (primary)


State 45

   95 primary: base_type • LBRACK args RBRACK

    LBRACK  shift, and go to state 66


State 46

   94 primary: lvalue •

    $default  reduce using rule 94 (primary)


State 47

   50 opt_init: ASSIGN expr •

    $default  reduce using rule 50 (opt_init)


State 48

   65 expr: expr_or •
   66 expr_or: expr_or • OR expr_and

    OR  shift, and go to state 67

    $default  reduce using rule 65 (expr)


State 49

   67 expr_or: expr_and •
   68 expr_and: expr_and • AND expr_cmp

    AND  shift, and go to state 68

    $default  reduce using rule 67 (expr_or)


State 50

   69 expr_and: expr_cmp •

    $default  reduce using rule 69 (expr_and)


State 51

   70 expr_cmp: expr_add • LT expr_add
   71         | expr_add • GT expr_add
   72         | expr_add • LE expr_add
   73         | expr_add • GE expr_add
   74         | expr_add • EQ expr_add
   75         | expr_add • NE expr_add
   76         | expr_add •
   77 expr_add: expr_add • PLUSOP expr_mul
   78         | expr_add • MINUSOP expr_mul

    PLUSOP   shift, and go to state 69
    MINUSOP  shift, and go to state 70
    LT       shift, and go to state 71
    GT       shift, and go to state 72
    LE       shift, and go to state 73
    GE       shift, and go to state 74
    EQ       shift, and go to state 75
    NE       shift, and go to state 76

    $default  reduce using rule 76 (expr_cmp)


State 52

   79 expr_add: expr_mul •
   80 expr_mul: expr_mul • MULTOP expr_pow
   81         | expr_mul • DIVOP expr_pow

    MULTOP  shift, and go to state 77
    DIVOP   shift, and go to state 78

    $default  reduce using rule 79 (expr_add)


State 53

   82 expr_mul: expr_pow •

    $default  reduce using rule 82 (expr_mul)


State 54

   83 expr_pow: expr_unary • POWOP expr_pow
   84         | expr_unary •

    POWOP  shift, and go to state 79

    $default  reduce using rule 84 (expr_pow)


State 55

   87 expr_unary: expr_postfix •
   88 expr_postfix: expr_postfix • LP args_opt RP

    LP  shift, and go to state 80

    $default  reduce using rule 87 (expr_unary)


State 56

   89 expr_postfix: primary •

    $default  reduce using rule 89 (expr_postfix)


State 57

   58 array_opt: LBRACK RBRACK •

    $default  reduce using rule 58 (array_opt)


State 58

   48 var_decl: VOLATILE ID COLON type opt_init •

    $default  reduce using rule 48 (var_decl)


State 59

    9 class_decl: CLASS ID LBRACE class_body • RBRACE opt_newlines

    RBRACE  shift, and go to state 81


State 60

   10 class_body: class_member_list •
   12 class_member_list: class_member_list • NEWLINE
   13                  | class_member_list • class_member

    ID        shift, and go to state 82
    NEWLINE   shift, and go to state 83
    VOLATILE  shift, and go to state 84

    $default  reduce using rule 10 (class_body)

    class_member  go to state 85


State 61

   23 entry: MAIN LP RP COLON • INT_TYPE stmt_block

    INT_TYPE  shift, and go to state 86


State 62

   59 lvalue: ID lvalue_tail_list •
   61 lvalue_tail_list: lvalue_tail_list • lvalue_tail

    LBRACK  shift, and go to state 87
    DOT     shift, and go to state 88

    $default  reduce using rule 59 (lvalue)

    lvalue_tail  go to state 89


State 63

   86 expr_unary: MINUSOP expr_unary •

    $default  reduce using rule 86 (expr_unary)


State 64

   85 expr_unary: NOT expr_unary •

    $default  reduce using rule 85 (expr_unary)


State 65

   96 primary: LP expr • RP

    RP  shift, and go to state 90


State 66

   95 primary: base_type LBRACK • args RBRACK

    ID          shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    MINUSOP     shift, and go to state 40
    NOT         shift, and go to state 41
    LP          shift, and go to state 42
    INT_TYPE    shift, and go to state 18
    FLOAT_TYPE  shift, and go to state 19
    BOOLEAN     shift, and go to state 20
    TRUE        shift, and go to state 43
    FALSE       shift, and go to state 44
